Fixed toast shifting bug

--- a/client/src/css/Description.css
+++ b/client/src/css/Description.css
@@ -5,6 +5,7 @@
     font-size: 16px;
     grid-template-columns: 1;
     grid-template-rows: 1;
+    align-self: end;
   }
 
   .description-text {
